# react-native-whisper

./: .gitignore  README.md  install_dependencies.sh
client/: README.md  app.json  babel.config.ts  bun.lockb  package.json
client/app/(tabs)/: index.tsx
client/components/: Mode.tsx  RecordingList.tsx  TranscribeOutput.tsx  TranscribedOutput.tsx
client/hooks/: useAudioRecorder.ts  useTranscription.ts
client/services/: openAITranscription.ts  openai.ts
server/: app.py  pyproject.toml
