[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "numpy>=2.2.1",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "speechrecognition>=3.12.0",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
    "openai>=1.58.1",
]
